[gd_scene load_steps=6 format=3 uid="uid://bowbvqed7tr02"]

[ext_resource type="PackedScene" uid="uid://bfja5411gtv4h" path="res://Player/Player.tscn" id="1_v8kyn"]
[ext_resource type="Script" path="res://World/World.gd" id="1_ys7y2"]
[ext_resource type="Texture2D" uid="uid://de5dalm8rljim" path="res://World/Background.png" id="2_k0k6s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16ahp"]

[node name="World" type="Node2D"]
script = ExtResource("1_ys7y2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_k0k6s")
stretch_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -18.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VersionLabel" type="Label" parent="CanvasLayer/Control/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "v: "

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="WorldBounds" type="Area2D" parent="."]

[node name="WorldBoundsShape" type="CollisionShape2D" parent="WorldBounds"]
shape = SubResource("RectangleShape2D_16ahp")

[node name="Player" parent="." instance=ExtResource("1_v8kyn")]

[connection signal="body_exited" from="WorldBounds" to="." method="_on_world_bounds_body_exited"]
